# F1-team-1

./: .gitignore  README.md  test-stream.py
f1/: drive.py  gesture_list.json  gesture_mapper.py  main.py  movements.py  my_pretrained_classifier.pkl  pyproject.toml  requirements.txt  ros2_controller.py  run_online_classification.py  stream.ipynb  stream.py  train_offline_model.py  training_features_std_filter_data.csv  vgamepad_controller.py
f1/images/: deothgesture_list.json
f1/streams/: emg_stream.ipynb  imu_stream.ipynb  multi_sensor_stream.ipynb  ppg_stream.ipynb
